# golden_retriever

./: .gitignore  Cargo.toml  deploy.sh
migrations/: initialize.sql
src/: db.rs  dynamo.rs  handler.rs  main.rs  models.rs  retrieve.rs  teststuff.rs
src/services/: mod.rs  ninegag.rs  tijd.rs
