[package]
name = "golden_retriever"
version = "0.1.0"
authors = ["tanguy <tanguy.soubry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlify_lambda = "0.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.60"
log = "0.4.11"
simple_logger = "1.11.0"
simple-error = "0.2.2"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rusoto_core = { version = "0.45.0" }
futures = "0.3.8"
tokio = { version = "0.3", features = ["full"] }
tokio-postgres = "0.5.4"
deadpool-postgres = "0.5.2"
tokio-pg-mapper = "0.1.8"
tokio-pg-mapper-derive = "0.1.5"
dotenv = "0.15.0"
config = "0.10.1"